@@ -15,6 +15,6 @@ libticonv_la_CPPFLAGS = -I$(top_srcdir)/intl \
 libticonv_la_LIBADD = @GLIB_LIBS@
 libticonv_la_LDFLAGS = -no-undefined -version-info @LT_LIBVERSION@
 libticonv_la_SOURCES = \
-	ticonv.c charset.c tokens.c filename.c
+	ticonv.c charset.c tokens.c filename.c iconv.c
 
 EXTRA_DIST = 
